<resources>
    <string name="app_name">Notes</string>
    <string name="description">Description\n\n</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_description1">Create notes in just two clicks! Capture your thoughts, ideas, and important tasks instantly.</string>
    <string name="intro_description2">Organize your notes into folders and tags. Easily find the information you need at any time.</string>
    <string name="intro_description3">Sync across all your devices. Access your notes anytime, anywhere.</string>
    <string name="skip">Skip</string>
    <string name="all_notes">All notes</string>
    <string name="search_notes">Search notes</string>
    <string name="time">time</string>
    <string name="text">Text</string>
    <string name="ready">Ready</string>
    <string name="change_color">Change color</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete note?</string>
    <string name="cancel">Cancel</string>
    <string name="folders">Folders</string>
    <string name="authorization">Authorization</string>
    <string name="sing_in_with_google">Sing in with Google</string>
    <string name="new_folder">New folder</string>
    <string name="save">Save</string>
    <string name="type_folder_name">Type folder name</string>
    <string name="default_web_client_id">603780116262-9605cosa0ibetmj4ngprmb9qmavlc77p.apps.googleusercontent.com</string>
    <string name="log_out">Log out</string>
</resources>