<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btnSkip"
            android:text="@string/skip"
            android:textSize="15sp"
            android:textColor="@color/orange"
            android:layout_margin="16dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/notes"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/font_potta_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:background="@color/white"
            android:layout_marginTop="32dp"
            android:layout_width="288dp"
            android:layout_height="264dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/tvImage"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/title"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginTop="46dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/light_gray"
            android:textAlignment="center"
            android:maxLines="3"
            android:layout_marginTop="8dp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="104dp"
            app:cornerRadius="12dp"
            android:layout_width="230dp"
            android:layout_height="58dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>