<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:background="@null"
    android:backgroundTint="@color/gray2"
    app:cardCornerRadius="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="135dp"
        android:text="@string/new_folder"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/dark_gray"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/et_newFolderName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/type_folder_name"
            android:textColorHint="@color/gray2"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_gravity="start|bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp" />

</androidx.cardview.widget.CardView>