<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@color/dark_gray"
    tools:context=".ui.user_confirm.DeleteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:text="@string/delete_note"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="128dp"
            android:layout_height="44dp"
            android:layout_gravity="start|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/gray"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="128dp"
            android:layout_height="44dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp" />

    </androidx.cardview.widget.CardView>

</FrameLayout>