<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/gray2"
        app:cardCornerRadius="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:text="@string/delete_note"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/gray"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp" />

    </androidx.cardview.widget.CardView>

</FrameLayout>