<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.note.NoteFragment">

    <FrameLayout
        android:id="@+id/box1"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/btnReady"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:src="@drawable/img_back" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/time" />

        <ImageView
            android:id="@+id/btnOptions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:src="@drawable/img_color_pick_unselected" />

    </FrameLayout>

    <TextView
        android:id="@+id/btnReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/ready"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/box1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/box1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:background="@null"
            android:hint="@string/title"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:layout_marginTop="12dp"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:backgroundTint="@color/gray"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@id/box1"
        app:layout_constraintTop_toBottomOf="@id/box1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:paddingHorizontal="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:padding="3dp"
                    android:src="@drawable/img_trash" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="50dp"
                android:text="@string/change_color"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_yellow"
                        style="@style/ColorPick"
                        android:backgroundTint="@color/yellow_pick" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_purple"
                        style="@style/ColorPick"
                        android:layout_marginHorizontal="8dp"
                        android:backgroundTint="@color/purple_pick" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_pink"
                        style="@style/ColorPick"
                        android:backgroundTint="@color/pink_pick" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_red"
                        style="@style/ColorPick"
                        android:backgroundTint="@color/red_pick" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_green"
                        style="@style/ColorPick"
                        android:layout_marginHorizontal="8dp"
                        android:backgroundTint="@color/green_pick" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/pick_blue"
                        style="@style/ColorPick"
                        android:backgroundTint="@color/blue_pick" />

                </LinearLayout>

            </FrameLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>